# MicroCore

./: .gitignore  LICENSE  README.md  pyproject.toml
src/microcore/: main.py
src/microcore/cli/: __init__.py  cli.py  execute.py
src/microcore/cli/commands/: __init__.py  create_node.py
src/microcore/cli/content/: __init__.py
src/microcore/core/files/: structmaster.py
